Altera CSAM-TRIAGE
Permite rodar o script CSAM-TRIAGE mesmo sem ter a partição TRIAGE para colocar memória SWAP e os arquivos temporários e miniaturas do IPED.